2006-07-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c:
	(window_key_press_event):
	(gdict_applet_entry_key_press_cb),
	(gdict_applet_draw): Toggle the definition window when Esc
	is pressed and the entry has focus. (#345117, reported by
	Christopher Barrington-Leigh)

2006-07-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/Makefile.am: Use the ENABLE_DEBUG conditional
	to turn on debug messages at compile time.  Should really
	make everything work at runtime too, some day.

	* src/gdict-applet.c
	(window_key_press_event): Ctrl+L should return focus to the
	word entry.

	(gdict_applet_toggle_window): Shift focus when showing the
	definition window.

	(gdict_applet_lookup_end_cb),
	(gdict_applet_error_cb): Resize the definition window when
	the look up ends, for good or evil. (#346893, reported by
	Matthias Clasen et al.)

	(gdict_applet_init): Use the new gdict_get_data_dir() function.

	* gdict-common.h:
	* gdict-common.c: Add gdict_get_data_dir() to factor out
	the data dir path build code.

	* gdict-source-dialog.c:
	(transport_combo_changed_cb), (update_dialog_ui),
	(build_new_source), (gdict_source_dialog_init): Use the
	index of the transport combo box instead of the string.

2006-06-12  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/Makefile.am: Remove wrong header files from the
	build. (Matthias Clasen, #344773)

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-speller.h:
	* libgdict/gdict-speller.c: Update the "word-activated" signal
	signature: it now includes the name of the database where the
	word was found.

	* libgdict/gdict-marshal.list: Add marshaller for the new
	"word-activated" signal signature.

	* src/gdict-window.c (gdict_window_set_word): Add a "database"
	parameter that changes the database for the word definition
	query; the change is local: the database from the source is
	kept unchanged for the following queries.

	(gdict_window_set_property), (entry_activate_cb),