@@ -1,3 +1,9 @@
+2006-07-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/gdict-applet.c: Remove an unneeded function; use
+	gtk_window_present() to give the definition window the
+	keyboard focus: now the key bindings should work.
+
 2006-07-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* src/gdict-applet.c:
